# ChangeLog for media-gfx/nwdiag
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  20 Jan 2012; James Rowe <jnrowe@gmail.com> nwdiag-0.7.0.ebuild:
  Keyworded amd64.

*nwdiag-0.7.0 (21 Dec 2011)

  21 Dec 2011; James Rowe <jnrowe@gmail.com> +nwdiag-0.7.0.ebuild:
  Version bump [501].

  21 Nov 2011; James Rowe <jnrowe@gmail.com> -nwdiag-0.4.0.ebuild,
  nwdiag-0.5.1.ebuild:
  Keyworded x86.

  21 Nov 2011; James Rowe <jnrowe@gmail.com> nwdiag-0.5.1.ebuild:
  Keyworded amd64.

  14 Nov 2011; James Rowe <jnrowe@gmail.com> metadata.xml:
  Removed redundant herd info.

*nwdiag-0.5.1 (22 Oct 2011)

  22 Oct 2011; James Rowe <jnrowe@gmail.com> +nwdiag-0.5.1.ebuild:
  Version bump [476].

  18 Sep 2011; James Rowe <jnrowe@gmail.com> -nwdiag-0.3.0.ebuild,
  nwdiag-0.4.0.ebuild:
  Keyworded x86.

  17 Sep 2011; James Rowe <jnrowe@gmail.com> nwdiag-0.4.0.ebuild:
  Keyworded amd64.

  19 Aug 2011; James Rowe <jnrowe@gmail.com> -nwdiag-0.2.7.ebuild,
  nwdiag-0.3.0.ebuild:
  Keyworded x86.

  19 Aug 2011; James Rowe <jnrowe@gmail.com> nwdiag-0.3.0.ebuild:
  Keyworded amd64.

*nwdiag-0.4.0 (18 Aug 2011)

  18 Aug 2011; James Rowe <jnrowe@gmail.com> +nwdiag-0.4.0.ebuild:
  Version bump [447].

  08 Aug 2011; James Rowe <jnrowe@gmail.com> -nwdiag-0.2.3.ebuild,
  nwdiag-0.2.7.ebuild:
  Keyworded x86.

  08 Aug 2011; James Rowe <jnrowe@gmail.com> nwdiag-0.2.7.ebuild:
  Keyworded amd64.

*nwdiag-0.3.0 (20 Jul 2011)

  20 Jul 2011; James Rowe <jnrowe@gmail.com> +nwdiag-0.3.0.ebuild:
  Version bump [441].

*nwdiag-0.2.7 (09 Jul 2011)

  09 Jul 2011; James Rowe <jnrowe@gmail.com> +nwdiag-0.2.7.ebuild,
  metadata.xml:
  Version bump [424].

  16 Jun 2011; James Rowe <jnrowe@gmail.com> nwdiag-0.2.3.ebuild:
  Keyworded x86.

  15 Jun 2011; James Rowe <jnrowe@gmail.com> nwdiag-0.2.3.ebuild:
  Keyworded amd64.

  20 May 2011; James Rowe <jnrowe@gmail.com> +watch:
  Added missing watch file for nwdiag.
