@@ -1,12 +1,11 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA512
 
-DIST nwdiag-0.5.1.tar.gz 26476 RMD160 4488c752fabd10d82ffb92c1ba7d917544ec9e13 SHA1 2215feff4b6192993ab45922731b617f7e11f1d8 SHA256 6dd01145b7269cca32f95271e6d729efd98d6a65b981f79356b92613789f1dcb
 DIST nwdiag-0.7.0.tar.gz 77278 RMD160 6456be34e665e4963226c23628be98251b19aa96 SHA1 bacded4368d613c4d87676f4ee35b6bc40f4a183 SHA256 29422d52059de35378d475ef633492e78762a0b506f88c3508e9cd9c20c8e19b
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEAREKAAYFAk8Zm30ACgkQzJrj3cAXR0nb5wCglqzTneejVOOybYodbTU9OjGW
-BvIAoLzWqQOcs2b8eQRFljOk8ZyWu5tw
-=nWR3
+iEYEAREKAAYFAk8Z7yAACgkQzJrj3cAXR0m1AwCggOx5AxYMDiq2F4iILMooyQlD
+2HgAn0xKvSzCrF+8ISo9OFpm2AXyBvnj
+=/bK+
 -----END PGP SIGNATURE-----
