@@ -4,10 +4,10 @@ DESCRIPTION=Generate network-diagram images from spec-text file
 EAPI=3
 HOMEPAGE=http://pypi.python.org/pypi/nwdiag/
 IUSE=examples minimal
-KEYWORDS=amd64 ~x86
+KEYWORDS=amd64 x86
 LICENSE=Apache-2.0
 RDEPEND=dev-python/setuptools >=media-gfx/blockdiag-1.1.0 !minimal? ( dev-python/sphinx ) >=app-admin/eselect-python-20091230 =dev-lang/python-2.7*
 SLOT=0
 SRC_URI=mirror://pypi/n/nwdiag/nwdiag-0.7.0.tar.gz
 _eclasses_=distutils	c8b0cab86443a130f3737ad1456d57d3	eutils	d92f291efb4ef0595cb90e4b4e7e6b6c	jnrowe-pypi	ec904774b8c8477cdb89043eb65c764c	multilib	5f4ad6cf85e365e8f0c6050ddd21659e	portability	536c5e70c5fb252ed3b769e04aa3f05b	python	412a8596c4b1620189e299c8dd303d0a	toolchain-funcs	6526ac6fc9aedf391efb91fcd75ace68	user	32a09e82e2f592bf88ad2fd08525166e
-_md5_=f22e52e195c03cf6624ddba319c032b0
+_md5_=b7ea84802e983e5b55ba3ac29259e037
