@@ -1,4 +1,3 @@
-REM 2012-01-20 *1 MSG %"Stabilise x86 media-gfx/nwdiag-0.7.0%" %a
 REM 2012-01-20 *1 MSG %"Stabilise x86 media-gfx/seqdiag-0.7.2%" %a
 REM 2012-01-20 *1 MSG %"Stabilise x86 dev-python/straight-plugin-1.2%" %a
 REM 2012-01-20 *1 MSG %"Stabilise x86 dev-python/tweepy-1.8%" %a
