@@ -2,6 +2,10 @@
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  20 Jan 2012; James Rowe <jnrowe@gmail.com> -nwdiag-0.5.1.ebuild,
+  nwdiag-0.7.0.ebuild:
+  Keyworded x86.
+
   20 Jan 2012; James Rowe <jnrowe@gmail.com> nwdiag-0.7.0.ebuild:
   Keyworded amd64.
 
